...
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/center"
        android:focusable="true"
        android:src="@drawable/ic_baseline_my_location_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/fabRoute"
        app:layout_constraintEnd_toEndOf="@+id/fabRoute"
        app:maxImageSize="@dimen/icon_size" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRoute"
        android:layout_width="wrap_content"
...
